[package]
name = "trello_task_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {features = ["json", "blocking"], version = "0.11.4"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.94"
dotenv = "0.15.0"
